<resources>
    <string name="app_name">MinbarAqsa</string>
    <string name="login_enterphone">من فضلك أدخل رقم هاتفك للدخول</string>
    <string name="login_phonenum">رقم الهاتف</string>
    <string name="login_wesend">سنرسل لك رسالة نصية مكونة من أربع أرقام للتحقق \n من رقم هاتفك</string>
    <string name="login_nohaveaccount">لا تمتلك حساب؟</string>
    <string name="login_record">سجل من هنا</string>
    <string name="login_send">إرسال</string>
    <string name="enter_code">من فضلك أدخل كود التحقق</string>
    <string name="verification_resend">إعادة إرسال كود التحقق</string>
    <string name="verification_verificate">تحقق</string>
    <string name="creatAccount_Name">الإسم</string>
    <string name="verification_email">البريد الإلكتروني</string>
    <string name="creatAccount_email">البريد الإلكتروني</string>
    <string name="creatAccount_phonenumber">رقم الهاتف</string>
    <string name="creatAccount_country">الدولة</string>
    <string name="creatAccount_city">المدينه</string>
    <string name="creatAccount_typeofmembers">نوع العضوية</string>
    <string name="creatAccount_mosqname">إسم المسجد</string>
    <string name="creatAccount_mosqaddress">عنوان المسجد</string>
    <string name="creatAccount_images">صور المسجد</string>
    <string name="EditAccount_facebook">فيسبوك</string>
    <string name="EditAccount_twitter">تويتر</string>
    <string name="EditAccount_whatsapp">واتس  اب</string>
    <string name="EditAccount_instagram">انستغرام</string>
    <string name="addsermon_type">نوع الخطبة</string>
    <string name="addsermon_address">عنوان الخطبة</string>
    <string name="addsermon_details">تفاصيل الخطبة</string>
    <string name="addsermon_add">إضافة</string>
    <string name="library">المكتبة</string>
    <string name="chat">المحادثات</string>
    <string name="news">الأخبار</string>
    <string name="connect">تواصل معنا</string>
    <string name="manage">إدارة المهام</string>
    <string name="voice">الخطب</string>
    <string name="hands">التبرعات</string>
    <string name="profile">الملف الشخصي</string>
    <string name="actions">الأحداث</string>
    <string name="editaccount_mosqimage">صور المسجد</string>
    <string name="editaccount_save">حفظ</string>
    <string name="editaccount_register">تسجيل</string>
    <string name="more_applanguage">لغة التطبيق</string>
    <string name="more_aboutapp">حول التطبيق</string>
    <string name="more_logout">تسجيل الخروج</string>
    <string name="news_qudstab">أخبار القدس</string>
    <string name="news_menbertab">أخبار المنبر</string>
    <string name="news_search">ابحث في الأخبار</string>
    <string name="textspeach_textspeach">خطب نصية</string>
    <string name="textspeach_visualspeach">الخطب المرئية</string>
    <string name="textspeach_search">ابحث في الخطب</string>
    <string name="notification_firsttab">تنبيهات المحادثات</string>
    <string name="notification_secondtab">تنبيهات عامة</string>
    <string name="donationvalue">قيمة التبرع</string>
    <string name="library_search">ابحث في الكتب</string>
    <string name="contactus_username">اسم المستخدم</string>
    <string name="contactus_email">البريد الإلكتروني</string>
    <string name="contactus_message">نص الرسالة</string>
    <string name="contactus_send">إرسال</string>
    <string name="taskmanagefilter_date">تاريخ المهمة</string>
    <string name="taskmanagefilter_from">من</string>
    <string name="taskmanagefilter_to">إلى</string>
    <string name="taskmanagefilter_super">صاحب المهمة</string>
    <string name="taskmanagefilter_classification">تصنيف المهمة</string>
    <string name="filter">فلترة</string>
    <string name="spewachdate">تاريخ الخطبة</string>
    <string name="taskdate">تاريخ استحقاق المهمة</string>
    <string name="taskmanagefilter_state">حالة المهمة</string>
    <string name="donations_zacatonmoney">زكاة مال</string>
    <string name="donations_first">زكاة مال</string>
    <string name="donations_second">تبرعات عامة</string>
    <string name="donations_third">كفالة يتيم</string>
    <string name="donations_forth">بناء مساجد</string>
    <string name="donations_fifth">كفالة دعاة</string>
    <string name="speachtype">نوع الخطبة</string>
    <string name="speachaddress">عنوان الخطبة</string>
    <string name="speachlink">رابط الخطبة</string>
    <string name="speach_search">ابحث في الخطب</string>
    <string name="speach_visualspeach">خطب مرئية</string>
    <string name="speach_textspeach">خطب نصية</string>
    <string name="notify">الاشعارات</string>
    <string name="search">ابحث</string>
    <string name="share">مشاركة</string>
    <string name="more_login">تسجيل الدخول</string>
    <string name="news_choose">اختر اللغة</string>
    <string name="dawnloaded">هل تريد بدء التحميل ؟</string>
    <string name="yes">نعم</string>
    <string name="cancel">إلغاء</string>
    <string name="english">الإنجليزية</string>
    <string name="arabic">العربية</string>
    <string name="turki">التركية</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">تفاصيل الخبر</string>
    <string name="item1">تنبيهات عامة</string>
    <string name="item2">تنبيهات المحادثات</string>
    <string name="notifications">التنبيهات</string>
    <string name="speach">الخطب</string>
    <string name="donations">التبرعات</string>
    <string name="doniation">تبرع</string>
    <string name="profilefile">الملف الشخصي</string>
    <string name="textspeach_tasks">ابحث في المهام</string>
    <string name="detais">تفاصيل المهمة</string>
    <string name="tasks">إدارة المهام</string>
</resources>
