<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@drawable/img_editprofile_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_editprofile_logo"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/creatAccount_Name"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/creatAccount_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/creatAccount_phonenumber"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.tiper.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/creatAccount_country"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"/>

        <com.tiper.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/creatAccount_city"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditAccount_facebook"
                android:drawableStart="@drawable/ic_editprofile_facebook"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditAccount_twitter"
                android:drawableStart="@drawable/ic_editprofile_twitter"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditAccount_whatsapp"
                android:drawableStart="@drawable/ic_editprofile_whatsapp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditAccount_instagram"
                android:drawableStart="@drawable/ic_editprofile_instagram"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.tiper.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/creatAccount_typeofmembers"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/creatAccount_mosqname" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/creatAccount_mosqaddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editaccount_mosqimage"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:textColor="@android:color/black"
            android:drawableStart="@drawable/ic_editprofile_mosqimage"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_creataccount_firstimg"
                android:layout_gravity="start"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_creataccount_secondimg"
                android:layout_gravity="start"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_creataccount_img3"
                android:layout_gravity="start"/>



        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/editaccount_save"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="30dp"/>



















    </LinearLayout>

</ScrollView>