<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addvisualActivity"
    android:orientation="vertical"
    android:background="@drawable/img_login_bg">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speachtype"
            android:textSize="20sp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speachaddress"
            android:textSize="20sp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speachlink"
            android:textSize="20sp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginStart="26dp"
        android:layout_gravity="bottom"
        android:text="@string/addsermon_add"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>



</LinearLayout>